--- a/sass/_config.variables.scss
+++ b/sass/_config.variables.scss
@@ -58,6 +58,7 @@ $color--dark-green: rgb(85, 159, 65);
 $color--purple: rgb(188, 157, 216);
 $color--dark-purple: rgb(83, 60, 159);
 
+$color--light-slate: rgb(199, 219, 199);
 $color--slate: rgb(150, 170, 150);
 $color--dark-slate: rgb(95, 108, 95);
 
