--- a/sass/style.scss
+++ b/sass/style.scss
@@ -67,4 +67,20 @@
 @import "components.cta";
 @import "components.process";
 @import "components.testimonials";
+@import "components.statistics";
+@import "components.service";
+@import "components.about-widget";
+@import "components.contact-widget";
 @import "components.buttons";
+
+
+
+
+
+// -----------------------------------------------------------------------------
+//
+// SCOPES
+//
+// -----------------------------------------------------------------------------
+
+@import "scopes.content-box";
